hotfix : elasticsearch 주석버전 elasticsearch 부분 분리 리팩토링 오류대비를 위한 주석처리